@@ -1,30 +1,51 @@
 package ru.yandex.practicum.sleeptracker;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import ru.yandex.practicum.sleeptracker.analysis.*;
+
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 
-public class SleepTrackerAppTest {
+class SleepTrackerAppTest {
+
     private List<SleepingSession> testSessions;
+    private SleepTrackerApp app;
 
     @BeforeEach
     void setUp() {
-        // Используем данные из примера
+        app = new SleepTrackerApp();
+
+        // Создаем тестовые данные
         testSessions = Arrays.asList(
-                SleepingSession.fromString("01.10.25 23:15;02.10.25 07:30;GOOD"),
-                SleepingSession.fromString("02.10.25 23:50;03.10.25 06:40;NORMAL"),
-                SleepingSession.fromString("03.10.25 14:10;03.10.25 15:00;NORMAL"),
-                SleepingSession.fromString("03.10.25 23:40;04.10.25 08:00;BAD"),
-                SleepingSession.fromString("05.10.25 00:10;05.10.25 06:20;GOOD"),
-                SleepingSession.fromString("05.10.25 13:30;05.10.25 14:15;NORMAL"),
-                SleepingSession.fromString("06.10.25 22:30;07.10.25 05:50;GOOD"),
-                SleepingSession.fromString("07.10.25 23:45;08.10.25 06:30;GOOD"),
-                SleepingSession.fromString("08.10.25 23:50;09.10.25 07:10;GOOD"),
-                SleepingSession.fromString("10.10.25 13:00;10.10.25 14:30;NORMAL"),
-                SleepingSession.fromString("10.10.25 23:55;11.10.25 06:10;GOOD"),
-                SleepingSession.fromString("11.10.25 23:10;12.10.25 07:00;BAD"),
-                SleepingSession.fromString("30.10.25 23:50;31.10.25 06:30;GOOD")
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 22, 15),
+                        LocalDateTime.of(2025, 10, 2, 8, 0),
+                        SleepQuality.GOOD
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 23, 0),
+                        LocalDateTime.of(2025, 10, 3, 8, 0),
+                        SleepQuality.NORMAL
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 3, 14, 30),
+                        LocalDateTime.of(2025, 10, 3, 15, 20),
+                        SleepQuality.NORMAL
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 3, 23, 30),
+                        LocalDateTime.of(2025, 10, 4, 6, 20),
+                        SleepQuality.BAD
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 5, 0, 10),
+                        LocalDateTime.of(2025, 10, 5, 6, 20),
+                        SleepQuality.GOOD
+                )
         );
     }
 
@@ -32,14 +53,16 @@ public class SleepTrackerAppTest {
     void testTotalSessionsFunction() {
         TotalSessionsFunction function = new TotalSessionsFunction();
         SleepAnalysisResult<Long> result = function.apply(testSessions);
-        assertEquals(13L, result.getValue());
-        assertEquals("Общее количество сессий сна", result.getDescription());
+
+        assertEquals(5L, result.getValue());
+        assertTrue(result.getDescription().contains("Общее количество"));
     }
 
     @Test
-    void testTotalSessionsFunction_EmptyList() {
+    void testTotalSessionsFunctionEmptyList() {
         TotalSessionsFunction function = new TotalSessionsFunction();
         SleepAnalysisResult<Long> result = function.apply(List.of());
+
         assertEquals(0L, result.getValue());
     }
 
@@ -47,15 +70,15 @@ public class SleepTrackerAppTest {
     void testMinDurationFunction() {
         MinDurationFunction function = new MinDurationFunction();
         SleepAnalysisResult<Long> result = function.apply(testSessions);
-        // Минимальная длительность: сессия 03.10.25 14:10-15:00 = 50 минут
-        // Но также есть сессия 05.10.25 13:30-14:15 = 45 минут
-        assertEquals(45L, result.getValue());
+
+        assertEquals(50L, result.getValue()); // 14:30-15:20 = 50 минут
     }
 
     @Test
-    void testMinDurationFunction_EmptyList() {
+    void testMinDurationFunctionEmptyList() {
         MinDurationFunction function = new MinDurationFunction();
         SleepAnalysisResult<Long> result = function.apply(List.of());
+
         assertEquals(0L, result.getValue());
     }
 
@@ -63,33 +86,32 @@ public class SleepTrackerAppTest {
     void testMaxDurationFunction() {
         MaxDurationFunction function = new MaxDurationFunction();
         SleepAnalysisResult<Long> result = function.apply(testSessions);
-        // Максимальная длительность: 01.10.25 23:15 - 02.10.25 07:30 = 495 минут
-        assertEquals(495L, result.getValue());
+
+        assertEquals(585L, result.getValue()); // 22:15-08:00 = 585 минут (9ч 45м)
     }
 
     @Test
-    void testMaxDurationFunction_EmptyList() {
+    void testMaxDurationFunctionEmptyList() {
         MaxDurationFunction function = new MaxDurationFunction();
         SleepAnalysisResult<Long> result = function.apply(List.of());
+
         assertEquals(0L, result.getValue());
     }
 
     @Test
-    void testAverageDurationFunction() {
-        AverageDurationFunction function = new AverageDurationFunction();
+    void testAvgDurationFunction() {
+        AvgDurationFunction function = new AvgDurationFunction();
         SleepAnalysisResult<Double> result = function.apply(testSessions);
-        // Рассчитаем среднее вручную для проверки
-        double expectedAvg = testSessions.stream()
-                .mapToLong(SleepingSession::getDurationMinutes)
-                .average()
-                .orElse(0);
-        assertEquals(expectedAvg, result.getValue(), 0.01);
+
+        // Ожидаемая средняя: (585 + 540 + 50 + 410 + 370) / 5 = 391
+        assertEquals(391.0, result.getValue(), 0.1);
     }
 
     @Test
-    void testAverageDurationFunction_EmptyList() {
-        AverageDurationFunction function = new AverageDurationFunction();
+    void testAvgDurationFunctionEmptyList() {
+        AvgDurationFunction function = new AvgDurationFunction();
         SleepAnalysisResult<Double> result = function.apply(List.of());
+
         assertEquals(0.0, result.getValue());
     }
 
@@ -97,181 +119,204 @@ public class SleepTrackerAppTest {
     void testBadQualitySessionsFunction() {
         BadQualitySessionsFunction function = new BadQualitySessionsFunction();
         SleepAnalysisResult<Long> result = function.apply(testSessions);
-        assertEquals(2L, result.getValue()); // BAD сессии: 03.10.25 и 11.10.25
+
+        assertEquals(1L, result.getValue()); // Только одна сессия с BAD качеством
     }
 
     @Test
-    void testBadQualitySessionsFunction_EmptyList() {
+    void testBadQualitySessionsFunctionNoBad() {
+        List<SleepingSession> goodSessions = Arrays.asList(
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 22, 15),
+                        LocalDateTime.of(2025, 10, 2, 8, 0),
+                        SleepQuality.GOOD
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 23, 0),
+                        LocalDateTime.of(2025, 10, 3, 8, 0),
+                        SleepQuality.NORMAL
+                )
+        );
+
         BadQualitySessionsFunction function = new BadQualitySessionsFunction();
-        SleepAnalysisResult<Long> result = function.apply(List.of());
+        SleepAnalysisResult<Long> result = function.apply(goodSessions);
+
         assertEquals(0L, result.getValue());
     }
 
     @Test
-    void testSleeplessNightsFunction() {
-        SleeplessNightsFunction function = new SleeplessNightsFunction();
-        SleepAnalysisResult<Long> result = function.apply(testSessions);
-        // Рассчитаем ожидаемое значение
-        assertNotNull(result.getValue());
-        System.out.println("Бессонных ночей: " + result.getValue());
-    }
-
-    @Test
-    void testSleeplessNightsFunction_EmptyList() {
-        SleeplessNightsFunction function = new SleeplessNightsFunction();
-        SleepAnalysisResult<Long> result = function.apply(List.of());
-        assertEquals(0L, result.getValue());
-    }
-
-    @Test
-    void testSleeplessNightsFunction_SingleNight() {
-        List<SleepingSession> singleNight = List.of(
-                SleepingSession.fromString("01.10.25 23:00;02.10.25 07:00;GOOD")
+    void testSleeplessNightsFunctionWithDaySessionsOnly() {
+        List<SleepingSession> daySessions = Arrays.asList(
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 14, 30),
+                        LocalDateTime.of(2025, 10, 1, 15, 20),
+                        SleepQuality.NORMAL
+                ),
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 13, 0),
+                        LocalDateTime.of(2025, 10, 2, 14, 0),
+                        SleepQuality.NORMAL
+                )
         );
-        SleeplessNightsFunction function = new SleeplessNightsFunction();
-        SleepAnalysisResult<Long> result = function.apply(singleNight);
-        assertEquals(0L, result.getValue()); // Не должно быть бессонных ночей
-    }
 
-    @Test
-    void testSleeplessNightsFunction_DaySleepOnly() {
-        List<SleepingSession> daySleep = List.of(
-                SleepingSession.fromString("01.10.25 14:00;01.10.25 15:00;NORMAL")
-        );
         SleeplessNightsFunction function = new SleeplessNightsFunction();
-        SleepAnalysisResult<Long> result = function.apply(daySleep);
-        assertEquals(1L, result.getValue()); // Одна бессонная ночь
-    }
+        SleepAnalysisResult<Long> result = function.apply(daySessions);
 
-    @Test
-    void testSleeplessNightsFunction_MultipleDays() {
-        List<SleepingSession> multipleDays = Arrays.asList(
-                SleepingSession.fromString("01.10.25 23:00;02.10.25 07:00;GOOD"),  // Ночь 1-2 окт
-                SleepingSession.fromString("03.10.25 14:00;03.10.25 15:00;NORMAL"), // Дневной сон
-                SleepingSession.fromString("04.10.25 01:00;04.10.25 06:00;GOOD")    // Ночь 3-4 окт
-        );
-        SleeplessNightsFunction function = new SleeplessNightsFunction();
-        SleepAnalysisResult<Long> result = function.apply(multipleDays);
-        // Должна быть одна бессонная ночь (2-3 окт)
-        assertEquals(1L, result.getValue());
+        // Должно быть 2 бессонные ночи (1-2 и 2-3 октября)
+        assertEquals(2L, result.getValue());
     }
 
     @Test
     void testChronotypeFunction() {
         ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(testSessions);
-        assertNotNull(result.getValue());
-        assertTrue(result.getValue().equals("Сова") ||
-                result.getValue().equals("Жаворонок") ||
-                result.getValue().equals("Голубь"));
-    }
 
-    @Test
-    void testChronotypeFunction_OnlyOwls() {
-        List<SleepingSession> owlSessions = List.of(
-                SleepingSession.fromString("01.10.25 23:30;02.10.25 09:30;GOOD"),
-                SleepingSession.fromString("02.10.25 23:45;03.10.25 09:15;GOOD")
+        // Создаем сессии разных типов
+        List<SleepingSession> mixedSessions = Arrays.asList(
+                // Сова: засыпание после 23:00, пробуждение после 9:00
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 23, 30),
+                        LocalDateTime.of(2025, 10, 2, 9, 30),
+                        SleepQuality.GOOD
+                ),
+                // Жаворонок: засыпание до 22:00, пробуждение до 7:00
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 21, 30),
+                        LocalDateTime.of(2025, 10, 3, 6, 30),
+                        SleepQuality.GOOD
+                ),
+                // Голубь: остальные случаи
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 3, 22, 30),
+                        LocalDateTime.of(2025, 10, 4, 8, 0),
+                        SleepQuality.GOOD
+                ),
+                // Еще одна сова
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 4, 23, 45),
+                        LocalDateTime.of(2025, 10, 5, 10, 0),
+                        SleepQuality.GOOD
+                )
         );
-        ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(owlSessions);
+
+        SleepAnalysisResult<String> result = function.apply(mixedSessions);
+
+        // Должен определиться как "Сова" (2 против 1 и 1)
         assertEquals("Сова", result.getValue());
     }
 
     @Test
-    void testChronotypeFunction_OnlyLarks() {
-        List<SleepingSession> larkSessions = List.of(
-                SleepingSession.fromString("01.10.25 21:30;02.10.25 06:30;GOOD"),
-                SleepingSession.fromString("02.10.25 21:45;03.10.25 06:15;GOOD")
-        );
+    void testChronotypeFunctionTie() {
         ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(larkSessions);
-        assertEquals("Жаворонок", result.getValue());
-    }
 
-    @Test
-    void testChronotypeFunction_Mixed() {
-        List<SleepingSession> mixedSessions = Arrays.asList(
-                SleepingSession.fromString("01.10.25 23:30;02.10.25 09:30;GOOD"),  // Сова
-                SleepingSession.fromString("02.10.25 21:30;03.10.25 06:30;GOOD"),  // Жаворонок
-                SleepingSession.fromString("03.10.25 22:30;04.10.25 08:00;GOOD"),  // Голубь
-                SleepingSession.fromString("04.10.25 23:45;05.10.25 09:15;GOOD")   // Сова
-        );
-        ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(mixedSessions);
-        assertEquals("Сова", result.getValue()); // Сов больше
-    }
-
-    @Test
-    void testChronotypeFunction_Tie() {
+        // Создаем сессии с равным количеством типов
         List<SleepingSession> tieSessions = Arrays.asList(
-                SleepingSession.fromString("01.10.25 23:30;02.10.25 09:30;GOOD"), // Сова
-                SleepingSession.fromString("02.10.25 21:30;03.10.25 06:30;GOOD"), // Жаворонок
-                SleepingSession.fromString("03.10.25 22:30;04.10.25 08:00;GOOD")  // Голубь
+                // Сова
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 23, 30),
+                        LocalDateTime.of(2025, 10, 2, 9, 30),
+                        SleepQuality.GOOD
+                ),
+                // Жаворонок
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 21, 30),
+                        LocalDateTime.of(2025, 10, 3, 6, 30),
+                        SleepQuality.GOOD
+                )
         );
-        ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(tieSessions);
-        assertEquals("Голубь", result.getValue()); // При равенстве - голубь
-    }
 
-    @Test
-    void testChronotypeFunction_IgnoreDaySessions() {
-        List<SleepingSession> sessionsWithDaySleep = Arrays.asList(
-                SleepingSession.fromString("01.10.25 23:30;02.10.25 09:30;GOOD"),  // Сова (ночь)
-                SleepingSession.fromString("02.10.25 14:00;02.10.25 15:00;NORMAL"), // Дневной сон (игнорируется)
-                SleepingSession.fromString("02.10.25 21:30;03.10.25 06:30;GOOD")   // Жаворонок (ночь)
-        );
-        ChronotypeFunction function = new ChronotypeFunction();
-        SleepAnalysisResult<String> result = function.apply(sessionsWithDaySleep);
-        // Дневной сон не должен учитываться, поэтому один сова и один жаворонок -> голубь
+        SleepAnalysisResult<String> result = function.apply(tieSessions);
+
+        // При равенстве должен быть "Голубь"
         assertEquals("Голубь", result.getValue());
     }
 
     @Test
-    void testSleepingSessionFromString() {
-        SleepingSession session = SleepingSession.fromString("01.10.25 22:15;02.10.25 08:00;GOOD");
+    void testChronotypeFunctionIgnoreDaySessions() {
+        ChronotypeFunction function = new ChronotypeFunction();
+
+        // Создаем сессии с дневным сном
+        List<SleepingSession> sessionsWithDaySleep = Arrays.asList(
+                // Сова
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 1, 23, 30),
+                        LocalDateTime.of(2025, 10, 2, 9, 30),
+                        SleepQuality.GOOD
+                ),
+                // Дневной сон (должен игнорироваться)
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 14, 0),
+                        LocalDateTime.of(2025, 10, 2, 15, 0),
+                        SleepQuality.NORMAL
+                ),
+                // Жаворонок
+                new SleepingSession(
+                        LocalDateTime.of(2025, 10, 2, 21, 30),
+                        LocalDateTime.of(2025, 10, 3, 6, 30),
+                        SleepQuality.GOOD
+                )
+        );
+
+        SleepAnalysisResult<String> result = function.apply(sessionsWithDaySleep);
+
+        // Должен быть "Голубь" (по 1 каждого типа, дневной сон игнорируется)
+        assertEquals("Голубь", result.getValue());
+    }
+
+    @Test
+    void testSleepingSessionParsing() {
+        String line = "01.10.25 22:15;02.10.25 08:00;GOOD";
+        SleepingSession session = SleepingSession.parseFromString(line);
+
+        assertEquals(2025, session.getStartTime().getYear());
+        assertEquals(10, session.getStartTime().getMonthValue());
+        assertEquals(1, session.getStartTime().getDayOfMonth());
         assertEquals(22, session.getStartTime().getHour());
         assertEquals(15, session.getStartTime().getMinute());
+
+        assertEquals(2025, session.getEndTime().getYear());
+        assertEquals(10, session.getEndTime().getMonthValue());
+        assertEquals(2, session.getEndTime().getDayOfMonth());
         assertEquals(8, session.getEndTime().getHour());
         assertEquals(0, session.getEndTime().getMinute());
+
         assertEquals(SleepQuality.GOOD, session.getQuality());
     }
 
     @Test
-    void testSessionDuration() {
-        SleepingSession session = SleepingSession.fromString("01.10.25 22:00;02.10.25 06:00;GOOD");
-        assertEquals(8 * 60, session.getDurationMinutes()); // 8 часов = 480 минут
+    void testSleepingSessionDuration() {
+        SleepingSession session = new SleepingSession(
+                LocalDateTime.of(2025, 10, 1, 23, 0),
+                LocalDateTime.of(2025, 10, 2, 7, 30),
+                SleepQuality.NORMAL
+        );
+
+        assertEquals(510, session.getDurationMinutes()); // 8 часов 30 минут = 510 минут
     }
 
     @Test
-    void testCoversNightHours() {
-        SleepingSession nightSession = SleepingSession.fromString("01.10.25 23:00;02.10.25 07:00;GOOD");
-        assertTrue(nightSession.coversNightHours());
+    void testSleepingSessionIsNightSession() {
+        // Ночная сессия (пересекается с 0-6)
+        SleepingSession nightSession1 = new SleepingSession(
+                LocalDateTime.of(2025, 10, 1, 23, 0),
+                LocalDateTime.of(2025, 10, 2, 8, 0),
+                SleepQuality.GOOD
+        );
+        assertTrue(nightSession1.isNightSession());
 
-        SleepingSession daySession = SleepingSession.fromString("01.10.25 14:00;01.10.25 15:00;NORMAL");
-        assertFalse(daySession.coversNightHours());
+        // Ночная сессия (заканчивается в 5 утра)
+        SleepingSession nightSession2 = new SleepingSession(
+                LocalDateTime.of(2025, 10, 1, 2, 0),
+                LocalDateTime.of(2025, 10, 1, 5, 0),
+                SleepQuality.GOOD
+        );
+        assertTrue(nightSession2.isNightSession());
 
-        SleepingSession lateNight = SleepingSession.fromString("01.10.25 02:00;01.10.25 05:00;GOOD");
-        assertTrue(lateNight.coversNightHours());
-
-        SleepingSession earlyMorning = SleepingSession.fromString("01.10.25 04:00;01.10.25 08:00;GOOD");
-        assertTrue(earlyMorning.coversNightHours());
-
-        SleepingSession eveningSession = SleepingSession.fromString("01.10.25 22:00;02.10.25 02:00;GOOD");
-        assertTrue(eveningSession.coversNightHours());
-    }
-
-    @Test
-    void testIsNightSession() {
-        SleepingSession overnight = SleepingSession.fromString("01.10.25 23:00;02.10.25 07:00;GOOD");
-        assertTrue(overnight.isNightSession());
-
-        SleepingSession daySession = SleepingSession.fromString("01.10.25 14:00;01.10.25 15:00;NORMAL");
+        // Дневная сессия
+        SleepingSession daySession = new SleepingSession(
+                LocalDateTime.of(2025, 10, 1, 14, 0),
+                LocalDateTime.of(2025, 10, 1, 15, 0),
+                SleepQuality.NORMAL
+        );
         assertFalse(daySession.isNightSession());
-
-        SleepingSession earlyMorning = SleepingSession.fromString("01.10.25 04:00;01.10.25 08:00;GOOD");
-        assertTrue(earlyMorning.isNightSession());
-
-        SleepingSession shortNight = SleepingSession.fromString("01.10.25 02:00;01.10.25 04:00;GOOD");
-        assertFalse(shortNight.isNightSession()); // Меньше 3 часов
     }
 }
